mco y mcl terminados